@@ -33,6 +33,10 @@ my $Server_epilogue = get_conf("SERVER_EPILOGUE_EXEC_FILE");
 my $Openssh_cmd = get_conf("OPENSSH_CMD");
 $Openssh_cmd = oar_Tools::get_default_openssh_cmd() if (!defined($Openssh_cmd));
 
+if (is_conf("OAR_RUNTIME_DIRECTORY")){
+    oar_Tools::set_default_oarexec_directory(get_conf("OAR_RUNTIME_DIRECTORY"));
+}
+
 my $Exit_code = 0;
 
 my $base = iolib::connect();
