@@ -39,6 +39,10 @@ my $remote_port = get_conf("SERVER_PORT");
 my $Openssh_cmd = get_conf("OPENSSH_CMD");
 $Openssh_cmd = oar_Tools::get_default_openssh_cmd() if (!defined($Openssh_cmd));
 
+if (is_conf("OAR_RUNTIME_DIRECTORY")){
+    oar_Tools::set_default_oarexec_directory(get_conf("OAR_RUNTIME_DIRECTORY"));
+}
+
 # Parse command line
 Getopt::Long::Configure("gnu_getopt");
 my $Checkpoint;
