@@ -218,13 +218,13 @@ SCHEDULER_AVAILABLE_SUSPENDED_RESOURCE_TYPE="default"
 ###############################################################################
 #
 # When OAR scheduler wants some nodes to wake up then it launches this command
-# with arguments : number_of_nodes_to_wake_up list_of_nodes(the scheduler looks
-# at the cm_availability field in resources table to know if the node
-# will be started for enough time)
+# and puts on its STDIN the list of nodes to wake up (one hostname by line).
+# The scheduler looks at the cm_availability field in the resources table to know
+# if the node will be started for enough time.
 #SCHEDULER_NODE_MANAGER_WAKE_UP_CMD="/path/to/the/command with your args"
 
-# When OAR considers that some nodes can be shut down, it launches this command with
-# the node list in arguments
+# When OAR considers that some nodes can be shut down, it launches this command
+# and puts the node list on its STDIN(one hostname by line).
 #SCHEDULER_NODE_MANAGER_SLEEP_CMD="/path/to/the/command args"
 
 # Parameters for the scheduler to decide when a node is idle.
